# clicker-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  conf.yaml  index.html
socket/: index.html  index.ts  package-lock.json
src/: main.rs
src/auth/: auth.rs  mod.rs  sha256.rs
src/chat/: db.rs
src/database/: user_db.rs
src/internal/: indexing.rs  logger.rs  mod.rs  set_interval.rs
src/internal/conf/: main.rs
src/internal/symbol_art_logger/: main.rs
src/leaderboard/: main.rs
src/socket/: io.rs
