[package]
name = "clicker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.0.0" # Проверьте последнюю версию на crates.io
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.8.0"
lazy_static = "1.4"
sha2 = "0.10.0"
socketioxide = "0.8"
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.6"
viz = "0.8.0"
tower-http = {version = "0.4", features = ["cors"]}
tower = "0.4"